+done for simple jsvc configurations